--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,11 @@
     <string name="u4et">Войдите в свою учетную запись</string>
     <string name="btnRegister">Зарегистрироваться</string>
     <string name="btnSignIn">Войти</string>
+    <string name="dobro">Добро пожаловать</string>
+    <string name="menu_drawer_open">Open menu drawer</string>
+    <string name="menu_drawer_close">close menu drawer</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
     />
 </resources>
